--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             <li><a href="#header">Home</a></li>
                             <li><a href="#about">categories</a></li>
                             <li><a href="#services">about-us</a></li>
-                            <li><a href="#portfolio">notes</a></li>
+                            <li><a href="notes.html">notes</a></li>
                             <li><a href="#contact">Courses</a></li>
                             <button class="contact-us">contact-us</button>
                             <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
