--- a/pyq.html
+++ b/pyq.html
@@ -31,7 +31,7 @@
         </div>
         <div class="nav-elements">
           <ul id="sidemenu">
-            <li><a href="#header">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="#about">categories</a></li>
             <li><a href="#services">about-us</a></li>
             <li><a href="#portfolio">notes</a></li>
