small changes in contact us form.

--- a/contactus.html
+++ b/contactus.html
@@ -48,13 +48,13 @@
     <!-- contact us page  -->
     <section class="contactus">
         <div id="contact">
-            <h1 style="margin-top: 20px;">Send Us Message</h1>
+            <h1 id="contact-topheading">Send Us Message</h1>
             <div class="containerr">
                 <div class="contact-left">
                    
                     <div class="g">
                         <p id="contmsg">
-                            Welcome to <b>ACERS</b>- Your Ultimate Academic Hub! We're here to support you
+                            Welcome to <b id="yellowish">ACERS</b>- Your Ultimate Academic Hub! We're here to support you
                             on your educational journey. Don't hesitate to reach out for help or guidance - our
                             dedicated team is ready to assist you. Your feedback is invaluable to us, as we strive to
                             create an inclusive and empowering learning environment. Feel free to ask questions, share
@@ -80,7 +80,7 @@
 
                             <form id="form" name="submit-to-google-sheet">
 
-                                <h3 class="sub-title">Connect With Us</h3>
+                                <h2 class="sub-title">Connect With Us</h2>
 
                                 <label for="name"></label>
                                 <input type="text" class="form-control" id="name" name="name" placeholder="Your Name"
