--- a/contactus.html
+++ b/contactus.html
@@ -68,7 +68,7 @@
                     </div>
                     <div class="p">
                         <i class="fa-solid fa-code"></i>
-                        <h3>Made by</h3>
+                        <h3>Made with <i class="fa-solid fa-heart" id="heart"></i> by</h3>
                         <p>Sahil, Aadil, Ismail, Armaan</p>
                     </div>
                 </div>
