--- a/notes.html
+++ b/notes.html
@@ -68,7 +68,7 @@
               <div class="card_content">
                 <h2 class="card_title">Computer system architecture</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/1Cuk58i6Pqg4AktZksX1AbNoBTQhEl3PL?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -78,11 +78,11 @@
               <div class="card_content">
                 <h2 class="card_title">DataBase management system</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/1g_Go94tKLYGXSo1_w8mOi_HwT4Q1znm_?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
-          <li class="cards_item">
+          <!-- <li class="cards_item">
             <div class="card">
               <div class="card_image"><img src="pyq/maths.jpg"></div>
               <div class="card_content">
@@ -91,14 +91,14 @@
                 <a href="" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
-          </li>
+          </li> -->
           <li class="cards_item">
             <div class="card">
               <div class="card_image"><img src="pyq/c.png"></div>
               <div class="card_content">
                 <h2 class="card_title">Programming with c</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/1HVW6YOyh1sVjicQzSRgt9I1Q1RxdBzWI?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -108,11 +108,11 @@
               <div class="card_content">
                 <h2 class="card_title">Programming with c++</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/1zDesoqZSRPqMowssutDAcm_ezJOEBvPf?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
-          <li class="cards_item">
+          <!-- <li class="cards_item">
             <div class="card">
               <div class="card_image"><img src="pyq/wt.jpg"></div>
               <div class="card_content">
@@ -121,14 +121,14 @@
                 <a href="" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
-          </li>
+          </li> -->
           <li class="cards_item">
             <div class="card">
               <div class="card_image"><img src="pyq/mm.jpg"></div>
               <div class="card_content">
                 <h2 class="card_title">multimedia</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/1FpZEITQ4HARt5hJjpdSVUIxYui8suG2v?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -138,7 +138,7 @@
               <div class="card_content">
                 <h2 class="card_title">java</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/1DFESGXuJfj12weAOe5RbcqNuCOI2wnW-?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -148,7 +148,7 @@
               <div class="card_content">
                 <h2 class="card_title">data structure and algorithm</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/1MVhg4rABxUKprup-WE1uq5F98IB_Hbjp?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -158,7 +158,7 @@
               <div class="card_content">
                 <h2 class="card_title">digital electronics</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/1-q9BeETHAwFj17NbQAJgyPULxwk1EmPZ?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -168,7 +168,7 @@
               <div class="card_content">
                 <h2 class="card_title">internet technology</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/1memLq2rvp2wl8JhYjNBJQ59ek6FG97B5?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -178,7 +178,7 @@
               <div class="card_content">
                 <h2 class="card_title">computer network</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/1icuMOF_Kk_jVZimUVAEPAywOJs2Octk6?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -188,7 +188,7 @@
               <div class="card_content">
                 <h2 class="card_title">communication skills</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/1Jfwr_1aL1FRd2veVYSeGksQqLjOIoHEY?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -198,7 +198,7 @@
               <div class="card_content">
                 <h2 class="card_title">visual basic (vb.net)</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/1nRG9c581r2bu66R9u3KErzEULDJxQEHt?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -208,7 +208,7 @@
               <div class="card_content">
                 <h2 class="card_title">operating system</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/1pWu_J6Q68qySbgefE705-TYGL37tEC8l?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -218,7 +218,7 @@
               <div class="card_content">
                 <h2 class="card_title">fundamental of computer</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/1rUiiMLUu051843TSkW9E195seP-u4Okr?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -228,7 +228,7 @@
               <div class="card_content">
                 <h2 class="card_title">system analysis and design</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/1qsDP1blYm7Jgu4EV-uv7CAiOe9mmkB3z?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
