--- a/pyq.html
+++ b/pyq.html
@@ -69,7 +69,7 @@
               <div class="card_content">
                 <h2 class="card_title">Computer system architecture</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/13WXN0OZBcUnF-FUXTd-J18hLPA7WWaSq?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -79,7 +79,7 @@
               <div class="card_content">
                 <h2 class="card_title">DataBase management system</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/1i-zx7p7szi18Jpks8JAptWOrPER0NozF?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -89,7 +89,7 @@
               <div class="card_content">
                 <h2 class="card_title">Mathematics</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/1Cs3OD4p_g5pT9uT6uZsOJQnTX59Ds6bA?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -99,7 +99,7 @@
               <div class="card_content">
                 <h2 class="card_title">Programming with c</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/12cF-nmdMCA4ZKNKFn9pFRk6szjrC8_4Z?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -109,7 +109,7 @@
               <div class="card_content">
                 <h2 class="card_title">Programming with c++</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/1A-wsqDctJbu5lefjY413MQRDnmovaoQF?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -119,7 +119,7 @@
               <div class="card_content">
                 <h2 class="card_title">web technology</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/1Sdeit4q1X12zAVo3-zv4TQCqnpOuPzv7?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -129,7 +129,7 @@
               <div class="card_content">
                 <h2 class="card_title">multimedia</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/1tbuKx6q_QDtvVwFu4nFu-v0iHspgqaGC?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -139,7 +139,7 @@
               <div class="card_content">
                 <h2 class="card_title">java</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/1zOOz5RzatDrm60qeppwJLdEG0SSgHRD9?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -149,7 +149,7 @@
               <div class="card_content">
                 <h2 class="card_title">data structure and algorithm</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/1cSfqhBBklc5ezh9N3obfH33Rd57YaYnZ?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -159,7 +159,7 @@
               <div class="card_content">
                 <h2 class="card_title">digital electronics</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/1B6BgAFHgEAYLrhSz38xzcMNJIKgHisIS?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -169,7 +169,7 @@
               <div class="card_content">
                 <h2 class="card_title">internet technology</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/1Ntv_JgER_zjSPvT1BvanzjZfENNS02pr?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -179,7 +179,7 @@
               <div class="card_content">
                 <h2 class="card_title">computer network</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/1izlcniPhbifTPNP8uYoT4sZgRAiSOMW8?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -189,7 +189,7 @@
               <div class="card_content">
                 <h2 class="card_title">communication skills</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/11C15MsOaTI3mC--q_j_qjyScru7nPaU7?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -199,7 +199,7 @@
               <div class="card_content">
                 <h2 class="card_title">visual basic (vb.net)</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/1qvbOXPp37G30qO_FRSx2b7hEydQec92C?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -209,7 +209,7 @@
               <div class="card_content">
                 <h2 class="card_title">operating system</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/1YRWTEo3rV0CENcFQcPuIsg0ujcLkSuQz?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -219,7 +219,7 @@
               <div class="card_content">
                 <h2 class="card_title">fundamental of computer</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/1YRWTEo3rV0CENcFQcPuIsg0ujcLkSuQz?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -229,7 +229,17 @@
               <div class="card_content">
                 <h2 class="card_title">system analysis and design</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/1We1Og4WcwCNaeIJdx2qThzbZl3ioO2Wh?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+              </div>
+            </div>
+          </li>
+          <li class="cards_item">
+            <div class="card">
+              <div class="card_image"><img src="pyq/ES.png"></div>
+              <div class="card_content">
+                <h2 class="card_title">Environment Studies</h2>
+                <p class="card_text">previous year question from (2016-2023)</p>
+                <a href="https://drive.google.com/drive/folders/1afqKKdn8hRZy3obIksu_K0U-8w8CNVEB?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
