--- a/index.html
+++ b/index.html
@@ -152,18 +152,19 @@
         <h3 class="team-heading">meet the team</h3>
         <div class="team-cards">
             <div class="team-card card1">
-                <div class="team-img"></div>
+                <div class="team-img" id="pic3"></div>
                 <div class="team-content">
                     <h1>ismail</h1>
                     <h3>batch: 2021-24</h3>
                     <ul id="socialid">
-                        <a href="">
+                        <a href="https://www.instagram.com/mr_muhammadismail_07dz?igsh=MzRlODBiNWFlZA==">
                             <li><i class='bx bxl-instagram'></i></li>
                         </a>
-                        <a href="">
+                        <a href="https://github.com/ismailmdattari">
                             <li><i class='bx bxl-github'></i></li>
                         </a>
-                        <a href="">
+                        <a
+                            href="https://www.linkedin.com/in/muhammad-ismail-307914290?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">
                             <li><i class='bx bxl-linkedin'></i></li>
                         </a>
                     </ul>
@@ -181,10 +182,10 @@
                     <h1>Mohd aadil</h1>
                     <h3>batch: 2021-24</h3>
                     <ul id="socialid">
-                        <a href="1">
+                        <a href="https://www.instagram.com/siddiquiaaqalb?igsh=MzRlODBiNWFlZA==">
                             <li><i class='bx bxl-instagram'></i></li>
                         </a>
-                        <a href="2">
+                        <a href="https://github.com/mdaadilsiddiqui">
                             <li><i class='bx bxl-github'></i></li>
                         </a>
                         <a href="3">
@@ -204,13 +205,13 @@
                     <h1>Mohd sahil</h1>
                     <h3>batch: 2021-24</h3>
                     <ul id="socialid">
-                        <a href="">
+                        <a href="https://www.instagram.com/y.sahilll?igsh=YzVkODRmOTdmMw==">
                             <li><i class='bx bxl-instagram'></i></li>
                         </a>
-                        <a href="">
+                        <a href="https://github.com/Sahill85">
                             <li><i class='bx bxl-github'></i></li>
                         </a>
-                        <a href="">
+                        <a href="www.linkedin.com/in/mohammad-sahil-731309248">
                             <li><i class='bx bxl-linkedin'></i></li>
                         </a>
                     </ul>
@@ -222,18 +223,19 @@
                 </div>
             </div>
             <div class="team-card card4">
-                <div class="team-img"></div>
+                <div class="team-img" id="pic2"></div>
                 <div class="team-content">
                     <h1>Mohd arman</h1>
                     <h3>batch: 2021-24</h3>
                     <ul id="socialid">
-                        <a href="">
+                        <a href="https://www.instagram.com/armaan_19?igsh=MzRlODBiNWFlZA==">
                             <li><i class='bx bxl-instagram'></i></li>
                         </a>
                         <a href="">
                             <li><i class='bx bxl-github'></i></li>
                         </a>
-                        <a href="">
+                        <a
+                            href="https://www.linkedin.com/in/mohammad-arman-50531724a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">
                             <li><i class='bx bxl-linkedin'></i></li>
                         </a>
                     </ul>
