--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <!-- ======== fontawesome ====== -->
     <script src="https://kit.fontawesome.com/484d1ff7e0.js" crossorigin="anonymous"></script>
+    <!-- ======== web icon ====== -->
+    <link rel="website icon" href="webicon.png" type="png">
     <title>ACERS</title>
 </head>
 
