added some information about contact us and add footer.

--- a/contactus.html
+++ b/contactus.html
@@ -38,7 +38,7 @@
                         <li><a href="#services">about-us</a></li>
                         <li><a href="#portfolio">notes</a></li>
                         <li><a href="#contact">Courses</a></li>
-                        <button class="contact-us">contact-us</button>
+                        <!-- <button class="contact-us">contact-us</button> -->
                         <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
                     </ul>
                     <i class="fa-solid fa-bars" onclick="openmenu()" id="hb"></i>
@@ -55,22 +55,24 @@
                 <div class="contact-left">
                    
                     <div class="g">
-                        <p id="contmsg">
+                        <!-- <p id="contmsg">
                             Welcome to <b id="yellowish">ACERS</b>- Your Ultimate Academic Hub! We're here to support you
                             on your educational journey. Don't hesitate to reach out for help or guidance - our
                             dedicated team is ready to assist you. Your feedback is invaluable to us, as we strive to
                             create an inclusive and empowering learning environment. Feel free to ask questions, share
                             your thoughts, and let us know how we can enhance your experience. Together, let's make your
-                            academic adventure a success!</p>
+                            academic adventure a success!
+                        </p> -->
+                        <img src="contactus.gif" alt="" height="350px" width="auto">
                     </div>
                      <div class="a">
                         <i class="fa-sharp fa-solid fa-paper-plane"></i>
-                        <h3>Email Us</h3>
-                        <p>acers.saai@gmail.com</p>
+                        <h4>Email Us</h4>
+                        <p id="emaill">acers.saai@gmail.com</p>
                     </div>
                     <div class="p">
                         <i class="fa-solid fa-code"></i>
-                        <h3>Made with <i class="fa-solid fa-heart" id="heart"></i> by</h3>
+                        <h4>Made with <i class="fa-solid fa-heart" id="heart"></i> by</h4>
                         <p>Sahil, Aadil, Ismail, Armaan</p>
                     </div>
                 </div>
@@ -146,7 +148,7 @@
                         <li><a href="#about-us">about-us</a></li>
                         <li><a href="#">notes</a></li>
                         <li><a href="courses.html">courses</a></li>
-                        <button class="contact-us">contact-us</button>
+                        <!-- <button class="contact-us">contact-us</button> -->
                     </ul>
                 </div>
                 <div class="source">
