--- a/iindex.html
+++ b/iindex.html
@@ -39,7 +39,7 @@
                             <li><a href="#services">about-us</a></li>
                             <li><a href="notes.html">notes</a></li>
                             <li><a href="#contact">Courses</a></li>
-                            <button class="contact-us">contact-us</button>
+                            <button class="contact-us" onclick="window.location.href='contactus.html';">contact-us</button>
                             <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
                         </ul>
                         <i class="fa-solid fa-bars" onclick="openmenu()" id="hb"></i>
@@ -156,7 +156,7 @@
             <div class="team-card card1">
                 <div class="team-img" id="pic3"></div>
                 <div class="team-content">
-                    <h1>ismail</h1>
+                    <h1>Vimdhayak Ji</h1>
                     <h3>batch: 2021-24</h3>
                     <ul id="socialid">
                         <a href="https://www.instagram.com/mr_muhammadismail_07dz?igsh=MzRlODBiNWFlZA==">
@@ -179,9 +179,9 @@
             </div>
 
             <div class="team-card card2">
-                <div class="team-img"></div>
+                <div class="team-img" id="pic4"></div>
                 <div class="team-content">
-                    <h1>Mohd aadil</h1>
+                    <h1>Me Hu Gian</h1>
                     <h3>batch: 2021-24</h3>
                     <ul id="socialid">
                         <a href="https://www.instagram.com/siddiquiaaqalb?igsh=MzRlODBiNWFlZA==">
@@ -227,7 +227,7 @@
             <div class="team-card card4">
                 <div class="team-img" id="pic2"></div>
                 <div class="team-content">
-                    <h1>Mohd arman</h1>
+                    <h1>Rolando Bhai</h1>
                     <h3>batch: 2021-24</h3>
                     <ul id="socialid">
                         <a href="https://www.instagram.com/armaan_19?igsh=MzRlODBiNWFlZA==">
@@ -260,10 +260,10 @@
                 <p> The development of ACERS has been a dynamic journey filled with innovation and dedication. As we
                     reflect on the year-long practical project, we take pride in the seamless integration of
                     cutting-edge technologies and user-centric design</p>
-                <p>
+                <!-- <p>
                     We extend our gratitude to everyone who contributed to this project, from the brainstorming sessions
                     to the final implementation
-                </p>
+                </p> -->
                 <h4>special thanks</h4>
                 <h3>mr. shailendra purohit (HOD BCA Faculty)</h3>
             </div>
@@ -278,7 +278,7 @@
                         <li><a href="#about-us">about-us</a></li>
                         <li><a href="#">notes</a></li>
                         <li><a href="courses.html">courses</a></li>
-                        <button class="contact-us">contact-us</button>
+                        <button class="contact-us" onclick="window.location.href='contactus.html';">contact-us</button>
                     </ul>
                 </div>
                 <div class="source">
