--- a/pyq.html
+++ b/pyq.html
@@ -38,7 +38,7 @@
             <li><a href="#services">about-us</a></li>
             <li><a href="#portfolio">notes</a></li>
             <li><a href="#contact">Courses</a></li>
-            <button class="contact-us">contact-us</button>
+            <button class="contact-us" onclick="window.location.href='contactus.html';">contact-us</button>
             <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
           </ul>
           <i class="fa-solid fa-bars" onclick="openmenu()" id="hb"></i>
@@ -279,7 +279,7 @@
             <li><a href="#about-us">about-us</a></li>
             <li><a href="#">notes</a></li>
             <li><a href="courses.html">courses</a></li>
-            <button class="contact-us">contact-us</button>
+            <button class="contact-us" onclick="window.location.href='contactus.html';">contact-us</button>
           </ul>
         </div>
         <div class="source">
