--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                             <li><a href="#about">categories</a></li>
                             <li><a href="#services">about-us</a></li>
                             <li><a href="notes.html">notes</a></li>
-                            <li><a href="#contact">Courses</a></li>
+                            <li><a href="courses.html">Courses</a></li>
                             <button class="contact-us" onclick="window.location.href='contactus.html';">contact-us</button>
                             <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
                         </ul>
@@ -105,7 +105,7 @@
                 </div>
             </a>
 
-            <a href="" class="categ">
+            <a href="career.html" class="categ">
                 <div class="card card4">
                     <div class="card-icon cr-icon4">
                         <i class='bx bxs-graduation'></i>
@@ -142,7 +142,6 @@
                         <li><i class='bx bx-check-square'></i>video lectures (to improve skills)</li>
                         <li><i class='bx bx-check-square'></i>PYQ-papers</li>
                         <li><i class='bx bx-check-square'></i>Career in BCA (what to do after BCA)</li>
-                        <li><i class='bx bx-check-square'></i>scholarship details</li>
                     </ul>
                 </div>
             </div>
@@ -156,7 +155,7 @@
             <div class="team-card card1">
                 <div class="team-img" id="pic3"></div>
                 <div class="team-content">
-                    <h1>Vimdhayak Ji</h1>
+                    <h1>Ismail</h1>
                     <h3>batch: 2021-24</h3>
                     <ul id="socialid">
                         <a href="https://www.instagram.com/mr_muhammadismail_07dz?igsh=MzRlODBiNWFlZA==">
@@ -181,7 +180,7 @@
             <div class="team-card card2">
                 <div class="team-img" id="pic4"></div>
                 <div class="team-content">
-                    <h1>Me Hu Gian</h1>
+                    <h1>Mohd Aadil</h1>
                     <h3>batch: 2021-24</h3>
                     <ul id="socialid">
                         <a href="https://www.instagram.com/siddiquiaaqalb?igsh=MzRlODBiNWFlZA==">
@@ -227,7 +226,7 @@
             <div class="team-card card4">
                 <div class="team-img" id="pic2"></div>
                 <div class="team-content">
-                    <h1>Rolando Bhai</h1>
+                    <h1>Mohd Arman</h1>
                     <h3>batch: 2021-24</h3>
                     <ul id="socialid">
                         <a href="https://www.instagram.com/armaan_19?igsh=MzRlODBiNWFlZA==">
