add courses and career pages.

--- a/career.html
+++ b/career.html
@@ -50,7 +50,8 @@
             <div class="header-content">
                 <h1>What to do after <span class="yellowish">BCA ?</span></h1>
                 <p>We assist students in charting their post-graduate
-                    path. Whether it's pursuing specialized master's programs. We provide tailored advice to align their skills with
+                    path. Whether it's pursuing specialized master's programs. We provide tailored advice to align their
+                    skills with
                     promising opportunities. Let's work together to turn their academic achievements into a fulfilling
                     and successful tech career.</p>
             </div>
@@ -59,6 +60,114 @@
             </div>
         </div>
 
+        <!------------------- main topoics starts here  ---------------->
+        <h1 id="career-headingg">here are some topics that you have to work on it and increase your Knowledge</h1>
+        <main id="career-guide">
+            <div class="main-container">
+
+                <ol>
+                    <li>Specialize in a Technology Area :</li>
+                    <div class="image">
+                        <p>
+                            Identify your areas of interest within the field of computer applications. It could be
+                            software
+                            development, database management, networking, cybersecurity, or other specialized areas.
+                            Specializing can make you more marketable in specific job markets.
+                        </p>
+
+                        <img src="career/technology.png" alt="">
+                    </div>
+                    <li>Skill Enhancement :</li>
+                    <div class="image">
+                        <p>Stay updated with the latest technologies and trends in the IT industry. Consider acquiring
+                            additional certifications in relevant technologies such as Java, Python, web development,
+                            cloud
+                            computing, or any other area of interest. This enhances your skill set and makes you stand
+                            out.
+                            <b>check out our courses recomendetion :-</b> <a href="courses.html">click here</a>
+                        </p>
+
+                        <img src="career/skills.jpg" alt="">
+                    </div>
+                    <li>Build a Strong Portfolio :</li>
+                    <div class="image">
+                        <p>Create a portfolio showcasing your projects, internships, and any practical experience you
+                            have
+                            gained during your BCA program. This can be a valuable asset when applying for jobs and
+                            internships. Create a portfolio website that shows all your academic marks, projects,
+                            achievements and etc.</p>
+
+                        <img src="career/portfolio.jpg" alt="">
+                    </div>
+                    <li>Internships and Real-world Experience :</li>
+                    <div class="image">
+                        <p>Gain practical experience through internships or part-time jobs. Real-world experience is
+                            highly
+                            valued by employers and can significantly enhance your employability. Search Companies for
+                            internships through platform like LinkedIn, Indeed and etc.</p>
+
+                        <img src="career/internship.jpg" alt="">
+                    </div>
+                    <li>Networking :</li>
+                    <div class="image">
+                        <p>Attend industry events, seminars, and conferences. Build a professional network through
+                            platforms
+                            like LinkedIn. Networking can open up job opportunities, provide mentorship, and keep you
+                            informed about industry trends.</p>
+
+                        <img src="career/network.jpg" alt="">
+                    </div>
+                    <li>Soft Skills Development :</li>
+                    <div class="image">
+                        <p>Work on developing soft skills like communication, teamwork, problem-solving, and time
+                            management. Soft skills development involves honing interpersonal and communication
+                            abilities, adaptability, and emotional intelligence. These qualities complement technical
+                            expertise, fostering effective collaboration, problem-solving, and overall personal growth.
+                        </p>
+
+                        <img src="career/Softskills.jpg" alt="">
+                    </div>
+                    <li>Job Search Strategies :</li>
+                    <div class="image">
+                        <p>Utilize online job portals, company career pages, and networking connections for job
+                            searching.
+                            Tailor your resume for each application, emphasizing relevant skills and experiences. Like
+                            LinkedIn, Indeed, etc.</p>
+
+                        <img src="career/jobsearch.jpg" alt="">
+                    </div>
+                </ol>
+            </div>
+
+            <div class="mca" id="mca">
+                <h1>Welcome to Your Ultimate Guide to MCA and Entrance Exams</h1>
+                <p>Embark on a journey of advanced learning and career excellence with our comprehensive guide to Master
+                    of Computer Applications (MCA). Whether you're a BCA graduate aiming to elevate your skills or a
+                    tech enthusiast ready to delve into the dynamic world of computing, this page is your go-to resource
+                    for all things MCA.</p>
+                <h3>Detail of all entrance exam conducted by top universities all over India</h3>
+                <ul>
+                    <li>NIMCET (for nits)</li>
+                    <li>RMCAAT (for rajasthan universities)</li>
+                    <li>CUET (for central universities)</li>
+                    <li>MAH CET (for maharastra universities)</li>
+                    <li>JMI Entrance (for jamia university)</li>
+                </ul>
+                <h3>there are four main topic that you have to learn to crack these entrance exam:-</h3>
+                <ol>
+                    <li>Maths</li>
+                    <li>Reasoning and Quantative Aptitude</li>
+                    <li>Computer Basics</li>
+                    <li>General English</li>
+                </ol>
+                <h3>Elegibility Criteria :- </h3>
+                <ul>
+                    <li>General category students must have secured at least 60% and reserved category students must have
+                        score 55% aggregate at graduation level.</li>
+                    <li>Students must have a BCA degree from a recognized university.</li>
+                </ul>
+            </div>
+        </main>
     </section>
 
 
