--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 </div>
             </a>
 
-            <a href="" class="categ">
+            <a href="courses.html" class="categ">
                 <div class="card card2">
                     <div class="card-icon cr-icon2">
                         <i class='bx bxl-youtube'></i>
@@ -170,7 +170,7 @@
                         </a>
                     </ul>
                     <div class="team-buttons">
-                        <button>portfolio</button>
+                        <button id="openButton">portfolio</button>
                         <!-- <button>resume</button> -->
                     </div>
 
@@ -194,7 +194,7 @@
                         </a>
                     </ul>
                     <div class="team-buttons ">
-                        <button>portfolio</button>
+                        <button id="openButton">portfolio</button>
                         <!-- <button>resume</button> -->
                     </div>
 
@@ -217,7 +217,7 @@
                         </a>
                     </ul>
                     <div class="team-buttons">
-                        <button>portfolio</button>
+                        <button id="sahil">portfolio</button>
                         <!-- <button>resume</button> -->
                     </div>
 
@@ -241,7 +241,7 @@
                         </a>
                     </ul>
                     <div class="team-buttons">
-                        <button>portfolio</button>
+                        <button id="openButton">portfolio</button>
                         <!-- <button>resume</button> -->
                     </div>
 
